Replace deprecated URL class with the slightly newer URI class